# adnn-ecu

./: .gitignore  .gitmodules  README.md
hdrnn/: .gitignore  README.md  notes.md
hdrnn/c-math.h/: .gitignore  LICENSE  Makefile  README.md  get-mnist.sh
hdrnn/c-math.h/bias/: bias
hdrnn/c-math.h/src/: arguments.h  example.c  images.h  main.c  mnist.h  network.h  random.h  ziggurat.h
hdrnn/c-math.h/weights/: weights
hdrnn/cpp-eigen/: .gitignore  CMakeLists.txt  LICENSE  README.md
hdrnn/cpp-eigen/src/: hdrnn.cc  hdrnn.h  mnist.h
hdrnn/cpp-libtorch/: .gitignore  CMakeLists.txt  README.md  mnist.cpp  submodules
hdrnn/hdr-nndl/: README.md  mnist_loader.py  run.py
hdrnn/measurements/: benchmark-notes.md
hdrnn/python-numpy/: .gitignore  README.md  genimg.py  infer.py  network.py  numpy.nn  train.py
hdrnn/python-tf/: convert_model.py  hdrnn.py
meta-adnn/: README
meta-adnn/conf/: layer.conf
scripts/: .gitignore  analyse-logs.py  perf-c-measure.py  perf-cpp-measure.py  perf-numpy-measure.py  perf-pytorch-measure.py  run-project-setup.sh
scripts/initial-benchmark/: analyse-logs.py  perf-measure.py  perf-numpy-measure.py  results.txt
scripts/measurements/: .gitignore  benchmark-notes.md  run-accuracy.sh  run-heaptrack.sh  run-perf.sh  run-quiet.sh  run.sh
scripts/plots/: .gitignore  accuracy-graphs.py  base-plots.py  comparisons.py  exec-graphs.py  graphs.py  parse.py  plotly-plots.py  plotly_plots.py  sample_alog_entry  sample_log_entry  sample_results_accuracy.json  sample_results_exec.json
wiki/process/: meta.md  version-control.md  yocto-notes.md
(+6 files in other folders)
